[gd_scene load_steps=5 format=3 uid="uid://cfloisxqepoth"]

[ext_resource type="Script" path="res://andrew/scenes/player.gd" id="1_wmbot"]
[ext_resource type="Texture2D" uid="uid://clct6b485cvsg" path="res://andrew/assets/player.png" id="2_4p4v2"]
[ext_resource type="PackedScene" uid="uid://bs04fi6i3j3hw" path="res://andrew/scenes/light.tscn" id="3_6py8n"]
[ext_resource type="PackedScene" uid="uid://dxjrl8r3cqbsr" path="res://andrew/scenes/pulse.tscn" id="4_flary"]

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_wmbot")
pulse_scene = ExtResource("4_flary")

[node name="PlayerImage" type="Sprite2D" parent="."]
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_4p4v2")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
rotation = 1.5708
polygon = PackedVector2Array(-8, -29, 11, -29, -13, -15, -12, 4, 10, 5, 26, 17, 32, 33, 23, 41, 10, 49, -9, 48, -23, 37, -33, 18, -32, -7, -22, -21)

[node name="Light" parent="." instance=ExtResource("3_6py8n")]
visible = false
position = Vector2(146, 8)

[node name="PulseSpawn" type="Marker2D" parent="."]
position = Vector2(62, 8)

[node name="LightBatteryTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="LightCooldownTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="PulseBatteryTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="timeout" from="LightBatteryTimer" to="." method="_on_light_battery_timer_timeout"]
[connection signal="timeout" from="LightCooldownTimer" to="." method="_on_light_cooldown_timer_timeout"]
[connection signal="timeout" from="PulseBatteryTimer" to="." method="_on_pulse_battery_timer_timeout"]
